--- a/reclaim/templates/accounts/logout.html
+++ b/reclaim/templates/accounts/logout.html
@@ -1,29 +1,17 @@
 {% extends 'accounts/base.html' %}
 
-{% block title %}
+{% block title %}ログアウト{% endblock %}
 
-{% endblock %}
-
-{% block content %}
-  <li class="nav-item">
-    <form action="{% url 'accounts:logout' %}" method="post">
-      {% csrf_token %}
-      <a class="nav-link" href="#" onclick="this.closest('form').submit();return false;">ログアウト</a>
-    </form>
-  </li>
-
-  <form id="f_logout" action="{% url 'accounts:logout' %}" method="post">
+{% block body %}
+<div class="container text-center mt-5">
+  <h2>ログアウトしています...</h2>
+  <p class="mt-3">自動的にログインページへ移動します。</p>
+  <p>移動しない場合は<a href="{% url 'accounts:login' %}">こちら</a>をクリックしてください。</p>
+  <form id="logout-form" action="{% url 'accounts:logout' %}" method="post" class="d-none">
     {% csrf_token %}
-    <button type="submit" name="btn" type="hidden">Logout</button>
   </form>
-
-  <p>次のページへ進まない場合は</p>
-  <a href="{% url 'accounts:login' %}">こちら</a>をクリックしてください<script>
-                                                           function logout() {
-                                                             document.getElementById('f_logout').submit()
-                                                             window.location.href = "{% url 'accounts:login' %}"
-                                                           }
-                                                           
-                                                           window.onload = logout
-                                                         </script>
+  <script>
+    document.getElementById('logout-form').submit();
+  </script>
+</div>
 {% endblock %}
