--- a/reclaim/templates/accounts/signup.html
+++ b/reclaim/templates/accounts/signup.html
@@ -1,55 +1,65 @@
 {% extends 'accounts/base.html' %}
 
-{% block title %}
-  Create account
-{% endblock %}
+{% block title %}新規登録{% endblock %}
 
 {% block body %}
-  <h2>Create account</h2>
-  <div>
-    <br />
-    <form method="POST">
-      {% csrf_token %}Email<input type="email" name="email" maxlength="254" required="" id="id_email" />
-      <br />
-      First_name<input type="text" name="first_name" maxlength="150" required="" id="id_first_name" />
-      <br />
-      Last_name<input type="text" name="last_name" maxlength="150" required="" id="id_last_name" />
-      <br />
-      パスワード<input type="password" name="password1" autocomplete="new-password" aria-describedby="id_password1_helptext" id="id_password1" />
-      <br />
-      パスワード(確認用)<input type="password" name="password2" autocomplete="new-password" aria-describedby="id_password2_helptext" id="id_password2" />
-      <br />
-      <!-- Birth_date<input type="text" name="birth_date" id="id_birth_date" /> -->
-      <br />
-      <div class="mt-3">
-        <button type="submit" class="btn btn-primary">Create</button>
-        <a href="/accounts/" class="btn btn-secondary">Back</a>
+<div class="row justify-content-center">
+  <div class="col-md-6">
+    <div class="card shadow-sm">
+      <div class="card-header bg-primary text-white">
+        <h2 class="card-title h4 mb-0">新規アカウント作成</h2>
       </div>
-    </form>
+      <div class="card-body">
+        <form method="POST" class="needs-validation" novalidate>
+          {% csrf_token %}
+          <div class="mb-3">
+            <label for="id_email" class="form-label">メールアドレス</label>
+            <input type="email" name="email" maxlength="254" required id="id_email" class="form-control" placeholder="example@email.com" />
+          </div>
+          <div class="row mb-3">
+            <div class="col-md-6">
+              <label for="id_first_name" class="form-label">名</label>
+              <input type="text" name="first_name" maxlength="150" required id="id_first_name" class="form-control" />
+            </div>
+            <div class="col-md-6">
+              <label for="id_last_name" class="form-label">姓</label>
+              <input type="text" name="last_name" maxlength="150" required id="id_last_name" class="form-control" />
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="id_password1" class="form-label">パスワード</label>
+            <input type="password" name="password1" required id="id_password1" class="form-control" autocomplete="new-password" />
+          </div>
+          <div class="mb-3">
+            <label for="id_password2" class="form-label">パスワード（確認）</label>
+            <input type="password" name="password2" required id="id_password2" class="form-control" autocomplete="new-password" />
+          </div>
 
-    {{ form.non_field_errors }}
-    {% for field in form %}
-      {% comment %} {{ field.label }}
-      {{ field }} {% endcomment %}
-      {{ field.errors }}
-      <br />
-    {% endfor %}
+          {% if form.non_field_errors %}
+            <div class="alert alert-danger">
+              {% for error in form.non_field_errors %}
+                <p class="mb-0">{{ error }}</p>
+              {% endfor %}
+            </div>
+          {% endif %}
 
-    {% comment %}
-    <form method="POST">
-      {% csrf_token %}
-      {{ form.non_field_errors }}
-      {% for field in form %}
-        {{ field.label }}
-        {{ field }}
-        {{ field.errors }}
-        <br />
-      {% endfor %}
-      <div class="mt-3">
-        <button type="submit" class="btn btn-primary">Create</button>
-        <a href="{% url 'accounts:index' %}" class="btn btn-secondary">Back</a>
+          {% for field in form %}
+            {% if field.errors %}
+              <div class="alert alert-danger">
+                {% for error in field.errors %}
+                  <p class="mb-0">{{ error }}</p>
+                {% endfor %}
+              </div>
+            {% endif %}
+          {% endfor %}
+
+          <div class="d-grid gap-2">
+            <button type="submit" class="btn btn-primary">アカウント作成</button>
+            <a href="{% url 'accounts:index' %}" class="btn btn-outline-secondary">戻る</a>
+          </div>
+        </form>
       </div>
-    </form>
-    {% endcomment %}
+    </div>
   </div>
+</div>
 {% endblock %}
