--- a/reclaim/templates/userview/list.html
+++ b/reclaim/templates/userview/list.html
@@ -1,34 +1,35 @@
 {% extends 'userview/base.html' %}
 
-{% block title %}
-  Item List
-{% endblock %}
+{% block title %}落とし物一覧{% endblock %}
 
 {% block body %}
-  <style>
-    .list {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-  </style>
-  <div class="list">
-    {% for item in object_list %}
-      <div class="card p-4 m-4 bg-light border border-success rounded" style="width: 18rem;">
-        {% if item.item_image %}
-          <img src="{{ MEDIA_URL }}{{ item.item_image }}" class="card-img-top" alt="..." />
-        {% endif %}
-        <div class="card-body">
-          <h4 class="card-title">{{ item.item_name }}</h4>
-          {% comment %} <h5 class="card-text">{{ item.item_description }}</h5> #TODO {% endcomment %}
-          <p class="card-text">{{ item.item_category_id }}</p>
-          {% for i in item.item_tag_id.all %}
-            {{ i }}
-          {% endfor %}
-          <p class="card-text">{{ item.item_lost_location }}</p>
-          <a href="{% url 'userview:detail' item.pk %}" class="btn btn-primary">詳細を見る</a>
+  <div class="container py-5">
+    <h2 class="mb-4 text-center">落とし物一覧</h2>
+    <div class="row g-4">
+      {% for item in object_list %}
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="card h-100 shadow-sm hover-card">
+            {% if item.item_image %}
+              <img src="{{ MEDIA_URL }}{{ item.item_image }}" class="card-img-top object-fit-cover" style="height: 200px;" alt="{{ item.item_name }}" />
+            {% endif %}
+            <div class="card-body">
+              <h5 class="card-title text-truncate">{{ item.item_name }}</h5>
+              <p class="card-text text-muted mb-2">{{ item.item_category_id }}</p>
+              <div class="mb-3">
+                {% for i in item.item_tag_id.all %}
+                  <span class="badge bg-success rounded-pill me-1">{{ i }}</span>
+                {% endfor %}
+              </div>
+              <p class="card-text small text-muted mb-3">
+                <i class="bi bi-geo-alt me-1"></i>{{ item.item_lost_location }}
+              </p>
+              <a href="{% url 'userview:detail' item.pk %}" class="btn btn-outline-success w-100">
+                詳細を見る
+              </a>
+            </div>
+          </div>
         </div>
-      </div>
-    {% endfor %}
+      {% endfor %}
+    </div>
   </div>
 {% endblock %}
